update lesson 1.1 practical

--- a/WDLesson1_1Practical/index.html
+++ b/WDLesson1_1Practical/index.html
@@ -34,7 +34,7 @@
     <!-- Challenge 7: Create a heading, h3 for JavaScript -->
   <h3>JavaScript</h3>  
     <!-- Challenge 8: Create a paragraph explaining what is JavaScript.  At least 3 sentences. -->
-  <p>JavaScript is a high-level, multi-paradigm programming language primarily known for enabling interactive and dynamic content on websites</p>  
+  <p>JavaScript is a programming language and core technology of the web platform, alongside HTML and CSS. Ninety-nine percent of websites on the World Wide Web use JavaScript on the client side for webpage behavior. Web browsers have a dedicated JavaScript engine that executes the client code.</p>  
     <!-- Challenge 8a: Insert a horizontal rule, hr -->
     <hr>
     
