--- a/WDLesson1_2Practical/index.html
+++ b/WDLesson1_2Practical/index.html
@@ -17,6 +17,7 @@
     <!-- Challenge 1: Create an <h1> and put "External Source Images" -->
 
     <!-- Challenge 2: Create an <h3> and put "Challenge 2". An image of your choice by searching Google and getting the image address. -->
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEc9A_S6BPxCDRp5WjMFEfXrpCu1ya2OO-Lw&s"
 
     <!-- Challenge 3: Create an <h3> and put "Challenge 3". Add another image of your choice and change its width and height both to 100 -->
 
