--- a/WDLesson1_2Practical/index.html
+++ b/WDLesson1_2Practical/index.html
@@ -17,13 +17,16 @@
     <!-- Challenge 1: Create an <h1> and put "External Source Images" -->
 
     <!-- Challenge 2: Create an <h3> and put "Challenge 2". An image of your choice by searching Google and getting the image address. -->
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEc9A_S6BPxCDRp5WjMFEfXrpCu1ya2OO-Lw&s"
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEc9A_S6BPxCDRp5WjMFEfXrpCu1ya2OO-Lw&s">
 
     <!-- Challenge 3: Create an <h3> and put "Challenge 3". Add another image of your choice and change its width and height both to 100 -->
-
+    <h3> Challenge 3 </h3>
+    <img width "100" height "100" src="https://cdn.theatlantic.com/thumbor/KHwQAP9g7N21qEYIAQjzAo7wwIU=/0x0:1920x1080/960x540/media/img/2025/06/emoji_web/original.jpg"
     <!-- Challenge 4: Create an <h3> and put "Challenge 4". Add three more of the same image.  Change the width and height of each image to be 200x200 for the first, 150x150 for the second and 100x100 for the third -->
-
-  <hr>
+    <h3> Challenge 4 </h3>
+    <img width "200" height "200" src="https://www.nhm.ac.uk/content/dam/nhm-www/discover/megalodon/megalodon_warpaint_shutterstock-full-width.jpg">
+    <img width "150" height "150" src="https://www.nhm.ac.uk/content/dam/nhm-www/discover/megalodon/megalodon_warpaint_shutterstock-full-width.jpg">
+    <img width "100" height "100" src= https://www.nhm.ac.uk/content/dam/nhm-www/discover/megalodon/megalodon_warpaint_shutterstock-full-width.jpg">
   <!-- Example of image from your website 
     <img src="HulkLogo1.png">
   -->
