update lesson 1.3 practical

--- a/WDLesson1_3Practical/index.html
+++ b/WDLesson1_3Practical/index.html
@@ -40,15 +40,9 @@
       <a href="resources/dukenukem.jpg"> Duke Nukem </a> <br>
     -->
     <!-- Challenge 9: Create links for the rest of the items located in resources -->
-    <a href="311.Data.js">
-             Data
-    </a>
-    <a href="BellSchedule.pdf">
-             BellSchedule
-    </a>
-    <a href="dukenukem.jpg">
-             dukenukem
-    </a>
+    <a href="311.Data.js"> Data </a> <br>
+    <a href="BellSchedule.pdf"> BellSchedule </a> <br>
+    <a href="dukenukem.jpg"> Duke Nuke </a> <br>
 
     <!-- Challenge Bonus: Create links to your Lesson 1 and Lesson 2 Activities.  Hint: Use the same link that you posted in Google Classroom for the submission of each Lesson Activity -->
   </body>
