--- a/WDLesson1_4Practical/index.html
+++ b/WDLesson1_4Practical/index.html
@@ -16,16 +16,26 @@
     </a>
     --> 
     <!-- Challenge 1: Add a heading with "Hyperlinking HTML Elements" followed by a horizontal rule-->
-
+    <hd>"Hyperlinking HTML Elements"</hd>
+    <hr>
     <!-- Challenge 2: Add the image for tutorialpoints that is stored locally and make it
      a hyperlink to  https://www.tutorialspoint.com/ that will open in a new tab -->
+     <a href="https://www.tutorialspoint.com/"
+              tutorialspoint
+     </a>
 
     <!-- Challenge 3: Add a paragraph describing JavaScript and make the paragraph a hyperlink to 
      https://javascript.info/ that will open in the SAME tab.-->
-
+     <p>
+  JavaScript is a versatile programming language used for creating interactive effects within web browsers. It is one of the core technologies of web development, along with HTML and CSS.
+  <a href="https://javascript.info/" target="_self">Learn more about JavaScript</a>.
+     </p>
     <!-- Challenge 4: Add an <h2> for "Career & Technical Education" and make the heading a hyperlink to 
       the cte.html file which is stored internally in the folder.  
       Note: You can link to other web pages.  This is how websites are created! -->
+     <h2>
+     <a href="cte.html">Career & Technical Education</a>
+     </h2>
 
     <!-- Challenge Bonus:  Complete all the challenges located in cte.html.  
      Note: Click on cte.html to open the html file and start editing. -->
