--- a/WDLesson1_5Practical/index.html
+++ b/WDLesson1_5Practical/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <!-- Challenge 1: Add the necessary containers to create each of the section shown in WDLesson1_5PracticalDiagram.png -->
-
+    <a href="https://
     <!-- Challenge 2: Within each container created, add the HTML elements specified in WDLesson1_5PracticalDiagram.png
          Note: Images for the last container are stored in the images folder.  Make the images the same height -->
 
