update lesson 2.3 practical

--- a/WDLesson2_3Practical/index.html
+++ b/WDLesson2_3Practical/index.html
@@ -26,10 +26,16 @@
   <body>
     <script src="script.js"></script>
     <!-- Challenge 1: Add the image of banner.jpg.  Add an id of "banner" to the image-->
-
+    <img src="banner.jpg" id="banner">
     <!-- Challenge 2: Add a horizontal rule.  Add an id of "bannerSeparator" to the <hr>-->
     
     <!-- Challenge 3: Add in id of logoContainer to the div below.-->
+    <div id="logo_container">
+    <img src="html.png" class="logo">
+    <img src="css.png" class="logo">
+    <img src="js.png" class="logo">
+    </div>
+    
     <div>
       <img src="html.png" class="logo">
       <img src="css.png" class="logo">
