update lesson 2.3Practical and lesson 2.5Practical

--- a/WDLesson2_5Practical/index.html
+++ b/WDLesson2_5Practical/index.html
@@ -15,7 +15,9 @@
   <body>
     <script src="script.js"></script>
     <!-- Challenge 1: Create a div container with id of banner.  Add a heading 1 with the text "Gallery" to the container.-->
-
+    <div id="banner">
+    <h1>Gallery</h1>
+    </div>
     <!-- Challenge 2: Create a div container with class of subbanner. Add a heading 3 with appropriate text that
                       represents the theme of the first photo gallery -->
 
