--- a/WDLesson2_8BPractical/index.html
+++ b/WDLesson2_8BPractical/index.html
@@ -18,6 +18,34 @@
         file info.txt contains the information to place inside each container BUT also contains information to help you identify the 
         necessary containers to create.  
     -->
-
+   <div id="banner" class="container">
+        <div> w3Schools.com </div>
+        <div> style="font-size:8pt"> THE WORLD'S LARGEST WEB DEVELOPER SITE </div>
+   </div>
+   <nav class="container">
+   </nav>
+   <div id="main" class="container">
+        <div>info.txt</div>
+   </div>
+   <div id="footer" class="container"
+   </div>
+   </nav>
+   <div style=""flex:1">1</div>
+   <div style ="flex:2"2</div>
+<nav class="container">
+     <div id="links" >
+        <a href="">Learn HTML</a>
+        <a href="">Learn CSS</a>
+        <a href="">Learn Bootstrap</a>
+        <a href="">Learn W3.CSS</a>
+        <a href="">Learn Colors</a>
+        <a href="">Learn Icons</a>
+        <a href="">Learn Graphics</a>
+        <a href="">Learn How To</a>
+        <a href="">Learn Sass</a> 
+      </div>
+</nav>
+   </div>
   </body>
+
 </html>
