--- a/WDLesson2_8BPractical/index.html
+++ b/WDLesson2_8BPractical/index.html
@@ -30,20 +30,11 @@
    <div id="footer" class="container"
    </div>
    </nav>
-   <div style=""flex:1">1</div>
-   <div style ="flex:2"2</div>
+   <div style ="flex:1"1>1</div>
+   <div style ="flex:2"><>2</div>
 <nav class="container">
      <div id="links" >
-        <a href="">Learn HTML</a>
-        <a href="">Learn CSS</a>
-        <a href="">Learn Bootstrap</a>
-        <a href="">Learn W3.CSS</a>
-        <a href="">Learn Colors</a>
-        <a href="">Learn Icons</a>
-        <a href="">Learn Graphics</a>
-        <a href="">Learn How To</a>
-        <a href="">Learn Sass</a> 
-      </div>
+       
 </nav>
    </div>
   </body>
