--- a/WDLesson3_1Practical/index.html
+++ b/WDLesson3_1Practical/index.html
@@ -26,9 +26,9 @@
       <!-- Challenge 3: Add an event listener to each of the images above in order to display an appropriate message about the image 
            using an alert when user clicks on the image.  
        -->
-      <img src="https://images5.alphacoders.com/139/thumb-1920-1398231.png" alt="Waguri Kaoruko" width="600" height="350" onclick="alert('Hello')">
-      <img src="https://images8.alphacoders.com/139/thumb-1920-1398232.png" alt="Waguri Kaoruko" width="600" height="350" onclick="alert('Hello')">
-      <img src="https://anihk.com/cdn/shop/articles/story_4121_photo_1752725075512163578.jpg?v=1753289271&width=1100" alt="Waguri Kaoruko" width="600" height="350" onclick="alert('Hello')">
+      <img src="https://images5.alphacoders.com/139/thumb-1920-1398231.png" alt="Waguri Kaoruko" width="600" height="350" onclick="alert('Cute Kaoruko')">
+      <img src="https://images8.alphacoders.com/139/thumb-1920-1398232.png" alt="Waguri Kaoruko" width="600" height="350" onclick="alert('Cute Kaoruko')">
+      <img src="https://anihk.com/cdn/shop/articles/story_4121_photo_1752725075512163578.jpg?v=1753289271&width=1100" alt="Waguri Kaoruko" width="600" height="350" onclick="alert('Cute Kaoruko')">
     </div>
 
 
