--- a/WDLesson3_4Practical/index.html
+++ b/WDLesson3_4Practical/index.html
@@ -21,9 +21,12 @@
                  3) A girl's name
                  4) Another vegetable
     -->
-
+<input type="text" id="boyName" placeholder="A boy's name">
+<input type="text" id="vegOne" placeholder="A vegetable">
+<input type="text" id="girlName" placeholder="A girl's name">
+<input type="text" id="vegTwo" placeholder="Another vegetable">
     <!-- Task 2: Create a button that calls createStory() -->
-
+    <button onclick="createStory()">Create Story</button>
     <!-- All other Tasks are located in script.js -->
     </div>
     <div class="container subbanner center">
